# CPP-SDL2-Fast-Game

./: CMakeLists.txt  README.md  resources.txt
source/: main.cpp
source/headers/: Application.hpp  Car.hpp  Core.hpp  GameObject.hpp  Pickup.hpp  Player.hpp
source/headers/GUI/: Button.hpp  Menu.hpp  Text.hpp
source/resources/: Application.cpp  Car.cpp  Core.cpp  GameObject.cpp  Pickup.cpp  Player.cpp
source/resources/GUI/: Button.cpp  Menu.cpp  Text.cpp
